# pxr_openadmet_blind_challenge

./: .gitignore  README.md  pyproject.toml
reports/track1_activity/: submission_20model_final_elasticnet.md  submission_6model_adaptive_elasticnet.md  submission_6model_fixed_elasticnet.md  submission_phase2_6model_adaptive_elasticnet.md  submission_phase2_v2_5model_adaptive_elasticnet.md  submission_phase2_v3_5model_selftrain_ensemble.md  submission_ridge17_stack_v4.md  submission_session2_14model_elasticnet.md  submission_session2_14model_gbr_stacker.md  submission_session2_14model_ridge_cv.md  submission_session2_chemprop_sc_seed1.md  submission_session2_ct_scd_sc.md  submission_session3_elasticnet.md
